fix(hotbars): add sensible hotbar defaults and other issues
- Sets sensible defaults for initial hotbar position when no position was set before
- Fixes an issue where hotbars by default would overlap each other
- Fixes an issue where hotbars by default have wildly varying styles
- Fixes an issue where hotbars could be dragged beneath the toolbar

fixes #3

--- a/src/scss/_hotbar.scss
+++ b/src/scss/_hotbar.scss
@@ -2,6 +2,11 @@ $slot-size: 64px;
 $slot-margin: 2px;
 $slot-border: 1px;
 
+.hotbars {
+  position: relative;
+  flex-grow: 1;
+}
+
 .hotbar {
   display: none;
   flex-wrap: nowrap;
@@ -153,6 +158,7 @@ $slot-border: 1px;
     font-size: 24px;
     text-shadow: 0 0 4px black, 0 0 8px black;
     z-index: 200;
+    user-select: none;
 
     &::before {
       font-size: 12px;
